[gd_scene load_steps=8 format=2]

[ext_resource path="res://Resources/GFX/card_bg_01.PNG" type="Texture" id=1]
[ext_resource path="res://Resources/GFX/MainSceneCharacterBackGround.png" type="Texture" id=2]
[ext_resource path="res://Resources/GFX/Interface/Font/Font.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/IventCard.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
use_filter = true
font_data = ExtResource( 3 )

[node name="CardTemplate" type="NinePatchRect"]
margin_right = 295.0
margin_bottom = 400.0
texture = ExtResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardTextCont" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -127.5
margin_top = 20.0
margin_right = 128.5
margin_bottom = 100.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CardText" type="Label" parent="CardTextCont"]
margin_right = 256.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
theme = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "dsadsadadada"
align = 1
autowrap = true

[node name="CharBackCont" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -117.0
margin_top = -100.0
margin_right = 862.0
margin_bottom = 881.0
rect_scale = Vector2( 0.24, 0.24 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CharacterBackground" type="TextureRect" parent="CharBackCont"]
margin_right = 982.0
margin_bottom = 981.0
texture = ExtResource( 2 )

[node name="CharNameCont" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -127.5
margin_top = -50.0
margin_right = 127.5
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CharacterName" type="Label" parent="CharNameCont"]
margin_right = 255.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
theme = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Name"
align = 1
autowrap = true
